2013-12-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac, .gitignore: Added configure option --enable-gcov to
	  enable gcov code coverage.

2013-09-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* configure.ac: Change the bug-report string in AC_INIT from the
	  tcp-scan email address to the github URL.

	* tcp-scan.c, check-tcp-scan-run1: updated to take account of
	  changes to bug-report string.

2013-08-16 Roy Hills <Roy.Hills@nta-monitor.com>

	* .gitignore: New file listing patterns to exclude from the repository.

	* COPYING: New file.

	* Removed $Id$ keywords from all files, and associated rcsid variables
	  from C source. These are not really needed and they don't work with
	  git.

2013-08-15 Roy Hills <Roy.Hills@nta-monitor.com>

	* Final SVN revision before moving to git.

2013-05-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.c: Removed unneeded errlen declaration to avoid "set but
	  not used" warning with GCC 4.6 and later.

	* check-sizes.c: Added conditional include for <limits.h>, which is
	  needed to define CHAR_BIT on Debian Wheezy.

	* configure.ac: Added check for limits.h header. Incremented version
	  number to 1.20.

2011-08-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* tcp-scan.1: Added options section to manpage.

	* tcp-scan.c:  Use pcap_get_selectable_fd() rather than pcap_fileno()
          to get the pcap file descriptor. Use "stdin" instead of
	  fdopen(0,"r") when using --filename=-

2011-07-01 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: Updated to latest version from arp-scan source tree.
	  This includes the GCC_WEXTRA macro and removes the dependence on the
	  <features.h> header.

	* configure.ac: Removed version number from AM_INIT_AUTOMAKE macro,
	  as this usage is obsolete now. Added -Wshadow warning switch and
	  Added GCC_WEXTRA macro to determine if the C compiler supports the
	  -Wextra switch to enable extra warnings. Define ATTRIBUTE_UNUSED